// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages exports should render correctly without data when operator has no products 1`] = `
<Fragment>
  <BaseLayout
    description="Export your products into NeTEx."
    showNavigation={true}
    title="Exports"
  >
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-full"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <h1
            className="govuk-heading-xl"
          >
            Export your data
          </h1>
           
          <div>
            <CsrfForm
              action="/api/exports"
              csrfToken=""
              method="post"
            >
              <button
                className="govuk-button govuk-visually-hidden"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                Export all fares
              </button>
            </CsrfForm>
            <a
              className="govuk-button govuk-visually-hidden"
              data-module="govuk-button"
              href="/products/selectExports"
            >
              Select products to export
            </a>
          </div>
        </div>
        <div
          className="govuk-grid-row"
        >
          <div
            className="govuk-grid-column-two-thirds"
          >
            <div
              className="govuk-inset-text govuk-!-margin-top-0"
            >
              Export is disabled as you have no products.
            </div>
            <p
              className="govuk-body-m govuk-!-margin-bottom-9"
            >
              This will export all of your current active products and any pending products. Any products flagged with ‘Needs Attention’ will be exported but may not be correct. Expired products or products for expired services, will not be included in the export. Once your export is complete, it will appear in the list below and you can download this and upload it to
               
              <a
                href="https://publish.bus-data.dft.gov.uk/"
              >
                BODS
              </a>
              .
            </p>
          </div>
        </div>
        <h2
          className="govuk-heading-m govuk-!-margin-bottom-6"
        >
          Previously exported fares
        </h2>
        <LoadingSpinner />
      </div>
    </div>
  </BaseLayout>
</Fragment>
`;

exports[`pages exports should render the export button correctly when operator has products 1`] = `
<Fragment>
  <BaseLayout
    description="Export your products into NeTEx."
    showNavigation={true}
    title="Exports"
  >
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-full"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <h1
            className="govuk-heading-xl"
          >
            Export your data
          </h1>
           
          <div>
            <CsrfForm
              action="/api/exports"
              csrfToken=""
              method="post"
            >
              <button
                className="govuk-button govuk-visually-hidden"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                Export all fares
              </button>
            </CsrfForm>
            <a
              className="govuk-button govuk-visually-hidden"
              data-module="govuk-button"
              href="/products/selectExports"
            >
              Select products to export
            </a>
          </div>
        </div>
        <div
          className="govuk-grid-row"
        >
          <div
            className="govuk-grid-column-two-thirds"
          >
            <p
              className="govuk-body-m govuk-!-margin-bottom-9"
            >
              This will export all of your current active products and any pending products. Any products flagged with ‘Needs Attention’ will be exported but may not be correct. Expired products or products for expired services, will not be included in the export. Once your export is complete, it will appear in the list below and you can download this and upload it to
               
              <a
                href="https://publish.bus-data.dft.gov.uk/"
              >
                BODS
              </a>
              .
            </p>
          </div>
        </div>
        <h2
          className="govuk-heading-m govuk-!-margin-bottom-6"
        >
          Previously exported fares
        </h2>
        <LoadingSpinner />
      </div>
    </div>
  </BaseLayout>
</Fragment>
`;
